Compilation/TP4/MiniC/MiniCParser.py
# Generated from MiniC.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MiniCParser ( Parser ):

    grammarFileName = "MiniC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'||'", "'&&'", "'=='", "'!='", "'>'", 
                     "'<'", "'>='", "'<='", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'!'", "':'", "';'", "','", "'='", "'('", "')'", 
                     "'{'", "'}'", "'true'", "'false'", "'if'", "'else'", 
                     "'while'", "'return'", "'println_int'", "'println_string'", 
                     "'println_float'", "'int'", "'float'", "'string'", 
                     "'bool'" ]

    symbolicNames = [ "<INVALID>", "OR", "AND", "EQ", "NEQ", "GT", "LT", 
                      "GTEQ", "LTEQ", "PLUS", "MINUS", "MULT", "DIV", "MOD", 
                      "NOT", "COL", "SCOL", "COM", "ASSIGN", "OPAR", "CPAR", 
                      "OBRACE", "CBRACE", "TRUE", "FALSE", "IF", "ELSE", 
                      "WHILE", "RETURN", "PRINTINT", "PRINTSTRING", "PRINTFLOAT", 
                      "INTTYPE", "FLOATTYPE", "STRINGTYPE", "BOOLTYPE", 
                      "ID", "INT", "FLOAT", "STRING", "COMMENT", "SPACE" ]

    RULE_prog = 0
    RULE_function = 1
    RULE_vardecl_l = 2
    RULE_vardecl = 3
    RULE_id_l = 4
    RULE_block = 5
    RULE_stat = 6
    RULE_assignment = 7
    RULE_if_stat = 8
    RULE_stat_block = 9
    RULE_while_stat = 10
    RULE_print_stat = 11
    RULE_expr_l = 12
    RULE_expr = 13
    RULE_atom = 14
    RULE_typee = 15

    ruleNames =  [ "prog", "function", "vardecl_l", "vardecl", "id_l", "block", 
                   "stat", "assignment", "if_stat", "stat_block", "while_stat", 
                   "print_stat", "expr_l", "expr", "atom", "typee" ]

    EOF = Token.EOF
    OR=1
    AND=2
    EQ=3
    NEQ=4
    GT=5
    LT=6
    GTEQ=7
    LTEQ=8
    PLUS=9
    MINUS=10
    MULT=11
    DIV=12
    MOD=13
    NOT=14
    COL=15
    SCOL=16
    COM=17
    ASSIGN=18
    OPAR=19
    CPAR=20
    OBRACE=21
    CBRACE=22
    TRUE=23
    FALSE=24
    IF=25
    ELSE=26
    WHILE=27
    RETURN=28
    PRINTINT=29
    PRINTSTRING=30
    PRINTFLOAT=31
    INTTYPE=32
    FLOATTYPE=33
    STRINGTYPE=34
    BOOLTYPE=35
    ID=36
    INT=37
    FLOAT=38
    STRING=39
    COMMENT=40
    SPACE=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniCParser.RULE_prog

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ProgRuleContext(ProgContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.ProgContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EOF(self):
            return self.getToken(MiniCParser.EOF, 0)
        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.FunctionContext)
            else:
                return self.getTypedRuleContext(MiniCParser.FunctionContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgRule" ):
                return visitor.visitProgRule(self)
            else:
                return visitor.visitChildren(self)



    def prog(self):

        localctx = MiniCParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            localctx = MiniCParser.ProgRuleContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniCParser.INTTYPE:
                self.state = 32
                self.function()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 38
            self.match(MiniCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniCParser.RULE_function

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FuncDeclContext(FunctionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.FunctionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTTYPE(self):
            return self.getToken(MiniCParser.INTTYPE, 0)
        def ID(self):
            return self.getToken(MiniCParser.ID, 0)
        def OPAR(self):
            return self.getToken(MiniCParser.OPAR, 0)
        def CPAR(self):
            return self.getToken(MiniCParser.CPAR, 0)
        def OBRACE(self):
            return self.getToken(MiniCParser.OBRACE, 0)
        def vardecl_l(self):
            return self.getTypedRuleContext(MiniCParser.Vardecl_lContext,0)

        def block(self):
            return self.getTypedRuleContext(MiniCParser.BlockContext,0)

        def RETURN(self):
            return self.getToken(MiniCParser.RETURN, 0)
        def INT(self):
            return self.getToken(MiniCParser.INT, 0)
        def SCOL(self):
            return self.getToken(MiniCParser.SCOL, 0)
        def CBRACE(self):
            return self.getToken(MiniCParser.CBRACE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDecl" ):
                return visitor.visitFuncDecl(self)
            else:
                return visitor.visitChildren(self)



    def function(self):

        localctx = MiniCParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function)
        try:
            localctx = MiniCParser.FuncDeclContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(MiniCParser.INTTYPE)
            self.state = 41
            self.match(MiniCParser.ID)
            self.state = 42
            self.match(MiniCParser.OPAR)
            self.state = 43
            self.match(MiniCParser.CPAR)
            self.state = 44
            self.match(MiniCParser.OBRACE)
            self.state = 45
            self.vardecl_l()
            self.state = 46
            self.block()
            self.state = 47
            self.match(MiniCParser.RETURN)
            self.state = 48
            self.match(MiniCParser.INT)
            self.state = 49
            self.match(MiniCParser.SCOL)
            self.state = 50
            self.match(MiniCParser.CBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_lContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniCParser.RULE_vardecl_l

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VarDeclListContext(Vardecl_lContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.Vardecl_lContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def vardecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.VardeclContext)
            else:
                return self.getTypedRuleContext(MiniCParser.VardeclContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclList" ):
                return visitor.visitVarDeclList(self)
            else:
                return visitor.visitChildren(self)



    def vardecl_l(self):

        localctx = MiniCParser.Vardecl_lContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardecl_l)
        self._la = 0 # Token type
        try:
            localctx = MiniCParser.VarDeclListContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniCParser.INTTYPE) | (1 << MiniCParser.FLOATTYPE) | (1 << MiniCParser.STRINGTYPE) | (1 << MiniCParser.BOOLTYPE))) != 0):
                self.state = 52
                self.vardecl()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniCParser.RULE_vardecl

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VarDeclContext(VardeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.VardeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def typee(self):
            return self.getTypedRuleContext(MiniCParser.TypeeContext,0)

        def id_l(self):
            return self.getTypedRuleContext(MiniCParser.Id_lContext,0)

        def SCOL(self):
            return self.getToken(MiniCParser.SCOL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)



    def vardecl(self):

        localctx = MiniCParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        try:
            localctx = MiniCParser.VarDeclContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.typee()
            self.state = 59
            self.id_l()
            self.state = 60
            self.match(MiniCParser.SCOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_lContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniCParser.RULE_id_l

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IdListBaseContext(Id_lContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.Id_lContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MiniCParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdListBase" ):
                return visitor.visitIdListBase(self)
            else:
                return visitor.visitChildren(self)


    class IdListContext(Id_lContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.Id_lContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MiniCParser.ID, 0)
        def COM(self):
            return self.getToken(MiniCParser.COM, 0)
        def id_l(self):
            return self.getTypedRuleContext(MiniCParser.Id_lContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdList" ):
                return visitor.visitIdList(self)
            else:
                return visitor.visitChildren(self)



    def id_l(self):

        localctx = MiniCParser.Id_lContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_id_l)
        try:
            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = MiniCParser.IdListBaseContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.match(MiniCParser.ID)
                pass

            elif la_ == 2:
                localctx = MiniCParser.IdListContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.match(MiniCParser.ID)
                self.state = 64
                self.match(MiniCParser.COM)
                self.state = 65
                self.id_l()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniCParser.RULE_block

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StatListContext(BlockContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.BlockContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.StatContext)
            else:
                return self.getTypedRuleContext(MiniCParser.StatContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatList" ):
                return visitor.visitStatList(self)
            else:
                return visitor.visitChildren(self)



    def block(self):

        localctx = MiniCParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_block)
        self._la = 0 # Token type
        try:
            localctx = MiniCParser.StatListContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniCParser.IF) | (1 << MiniCParser.WHILE) | (1 << MiniCParser.PRINTINT) | (1 << MiniCParser.PRINTSTRING) | (1 << MiniCParser.PRINTFLOAT) | (1 << MiniCParser.ID))) != 0):
                self.state = 68
                self.stat()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(MiniCParser.AssignmentContext,0)


        def SCOL(self):
            return self.getToken(MiniCParser.SCOL, 0)

        def if_stat(self):
            return self.getTypedRuleContext(MiniCParser.If_statContext,0)


        def while_stat(self):
            return self.getTypedRuleContext(MiniCParser.While_statContext,0)


        def print_stat(self):
            return self.getTypedRuleContext(MiniCParser.Print_statContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = MiniCParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_stat)
        try:
            self.state = 80
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MiniCParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.assignment()
                self.state = 75
                self.match(MiniCParser.SCOL)
                pass
            elif token in [MiniCParser.IF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.if_stat()
                pass
            elif token in [MiniCParser.WHILE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 78
                self.while_stat()
                pass
            elif token in [MiniCParser.PRINTINT, MiniCParser.PRINTSTRING, MiniCParser.PRINTFLOAT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 79
                self.print_stat()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniCParser.RULE_assignment

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssignStatContext(AssignmentContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.AssignmentContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MiniCParser.ID, 0)
        def ASSIGN(self):
            return self.getToken(MiniCParser.ASSIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(MiniCParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStat" ):
                return visitor.visitAssignStat(self)
            else:
                return visitor.visitChildren(self)



    def assignment(self):

        localctx = MiniCParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assignment)
        try:
            localctx = MiniCParser.AssignStatContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(MiniCParser.ID)
            self.state = 83
            self.match(MiniCParser.ASSIGN)
            self.state = 84
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniCParser.RULE_if_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IfStatContext(If_statContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.If_statContext
            super().__init__(parser)
            self.then_block = None # Stat_blockContext
            self.else_block = None # Stat_blockContext
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(MiniCParser.IF, 0)
        def OPAR(self):
            return self.getToken(MiniCParser.OPAR, 0)
        def expr(self):
            return self.getTypedRuleContext(MiniCParser.ExprContext,0)

        def CPAR(self):
            return self.getToken(MiniCParser.CPAR, 0)
        def stat_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.Stat_blockContext)
            else:
                return self.getTypedRuleContext(MiniCParser.Stat_blockContext,i)

        def ELSE(self):
            return self.getToken(MiniCParser.ELSE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStat" ):
                return visitor.visitIfStat(self)
            else:
                return visitor.visitChildren(self)



    def if_stat(self):

        localctx = MiniCParser.If_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_if_stat)
        try:
            localctx = MiniCParser.IfStatContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(MiniCParser.IF)
            self.state = 87
            self.match(MiniCParser.OPAR)
            self.state = 88
            self.expr(0)
            self.state = 89
            self.match(MiniCParser.CPAR)
            self.state = 90
            localctx.then_block = self.stat_block()
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 91
                self.match(MiniCParser.ELSE)
                self.state = 92
                localctx.else_block = self.stat_block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stat_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBRACE(self):
            return self.getToken(MiniCParser.OBRACE, 0)

        def block(self):
            return self.getTypedRuleContext(MiniCParser.BlockContext,0)


        def CBRACE(self):
            return self.getToken(MiniCParser.CBRACE, 0)

        def stat(self):
            return self.getTypedRuleContext(MiniCParser.StatContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_stat_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_block" ):
                return visitor.visitStat_block(self)
            else:
                return visitor.visitChildren(self)




    def stat_block(self):

        localctx = MiniCParser.Stat_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_stat_block)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MiniCParser.OBRACE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.match(MiniCParser.OBRACE)
                self.state = 96
                self.block()
                self.state = 97
                self.match(MiniCParser.CBRACE)
                pass
            elif token in [MiniCParser.IF, MiniCParser.WHILE, MiniCParser.PRINTINT, MiniCParser.PRINTSTRING, MiniCParser.PRINTFLOAT, MiniCParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.stat()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniCParser.RULE_while_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WhileStatContext(While_statContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.While_statContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(MiniCParser.WHILE, 0)
        def OPAR(self):
            return self.getToken(MiniCParser.OPAR, 0)
        def expr(self):
            return self.getTypedRuleContext(MiniCParser.ExprContext,0)

        def CPAR(self):
            return self.getToken(MiniCParser.CPAR, 0)
        def stat_block(self):
            return self.getTypedRuleContext(MiniCParser.Stat_blockContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStat" ):
                return visitor.visitWhileStat(self)
            else:
                return visitor.visitChildren(self)



    def while_stat(self):

        localctx = MiniCParser.While_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_while_stat)
        try:
            localctx = MiniCParser.WhileStatContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(MiniCParser.WHILE)
            self.state = 103
            self.match(MiniCParser.OPAR)
            self.state = 104
            self.expr(0)
            self.state = 105
            self.match(MiniCParser.CPAR)
            self.state = 106
            self.stat_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniCParser.RULE_print_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PrintstringStatContext(Print_statContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.Print_statContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PRINTSTRING(self):
            return self.getToken(MiniCParser.PRINTSTRING, 0)
        def OPAR(self):
            return self.getToken(MiniCParser.OPAR, 0)
        def expr(self):
            return self.getTypedRuleContext(MiniCParser.ExprContext,0)

        def CPAR(self):
            return self.getToken(MiniCParser.CPAR, 0)
        def SCOL(self):
            return self.getToken(MiniCParser.SCOL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintstringStat" ):
                return visitor.visitPrintstringStat(self)
            else:
                return visitor.visitChildren(self)


    class PrintfloatStatContext(Print_statContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.Print_statContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PRINTFLOAT(self):
            return self.getToken(MiniCParser.PRINTFLOAT, 0)
        def OPAR(self):
            return self.getToken(MiniCParser.OPAR, 0)
        def expr(self):
            return self.getTypedRuleContext(MiniCParser.ExprContext,0)

        def CPAR(self):
            return self.getToken(MiniCParser.CPAR, 0)
        def SCOL(self):
            return self.getToken(MiniCParser.SCOL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintfloatStat" ):
                return visitor.visitPrintfloatStat(self)
            else:
                return visitor.visitChildren(self)


    class PrintintStatContext(Print_statContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.Print_statContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PRINTINT(self):
            return self.getToken(MiniCParser.PRINTINT, 0)
        def OPAR(self):
            return self.getToken(MiniCParser.OPAR, 0)
        def expr(self):
            return self.getTypedRuleContext(MiniCParser.ExprContext,0)

        def CPAR(self):
            return self.getToken(MiniCParser.CPAR, 0)
        def SCOL(self):
            return self.getToken(MiniCParser.SCOL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintintStat" ):
                return visitor.visitPrintintStat(self)
            else:
                return visitor.visitChildren(self)



    def print_stat(self):

        localctx = MiniCParser.Print_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_print_stat)
        try:
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MiniCParser.PRINTINT]:
                localctx = MiniCParser.PrintintStatContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.match(MiniCParser.PRINTINT)
                self.state = 109
                self.match(MiniCParser.OPAR)
                self.state = 110
                self.expr(0)
                self.state = 111
                self.match(MiniCParser.CPAR)
                self.state = 112
                self.match(MiniCParser.SCOL)
                pass
            elif token in [MiniCParser.PRINTFLOAT]:
                localctx = MiniCParser.PrintfloatStatContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.match(MiniCParser.PRINTFLOAT)
                self.state = 115
                self.match(MiniCParser.OPAR)
                self.state = 116
                self.expr(0)
                self.state = 117
                self.match(MiniCParser.CPAR)
                self.state = 118
                self.match(MiniCParser.SCOL)
                pass
            elif token in [MiniCParser.PRINTSTRING]:
                localctx = MiniCParser.PrintstringStatContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 120
                self.match(MiniCParser.PRINTSTRING)
                self.state = 121
                self.match(MiniCParser.OPAR)
                self.state = 122
                self.expr(0)
                self.state = 123
                self.match(MiniCParser.CPAR)
                self.state = 124
                self.match(MiniCParser.SCOL)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_lContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniCParser.RULE_expr_l

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ExprListBaseContext(Expr_lContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.Expr_lContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(MiniCParser.ExprContext,0)

